done document delect api